all workbook changed

--- a/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x08.md
+++ b/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x08.md
@@ -1,6 +1,6 @@
 # 스택의 활용(수식의 괄호 쌍)
 
-## Last Update (2023.07.25)    
+## Last Update (2024.01.23)    
 
 ![100%](https://progress-bar.dev/2/?scale=5&title=progress&width=500&color=babaca&suffix=/5)
 
@@ -8,8 +8,8 @@
 
 | 문제 분류 | 문제 | 문제 제목 | 내 코드 | 정답 코드 |
 | :--: | :--: | :--: | :--: | :--: |
-| 연습 문제 | 4949 | [균형잡힌 세상](https://www.acmicpc.net/problem/4949) | [내 코드](../0x08/my_solutions/4949.cpp) | [정답 코드](../0x08/solutions/4949.cpp) |
+| 연습 문제 | 4949 | [균형잡힌 세상](https://www.acmicpc.net/problem/4949) | [✅](../0x08/my_solutions/4949.cpp) | [정답 코드](../0x08/solutions/4949.cpp) |
 | 기본 문제✔ | 3986 | [좋은 단어](https://www.acmicpc.net/problem/3986) | [❌](#) | [정답 코드](../0x08/solutions/3986.cpp) |
-| 기본 문제 | 9012 | [괄호](https://www.acmicpc.net/problem/9012) | [내 코드](../0x08/my_solutions/9012.cpp) | [정답 코드](../0x08/solutions/9012.cpp) |
+| 기본 문제 | 9012 | [괄호](https://www.acmicpc.net/problem/9012) | [✅](../0x08/my_solutions/9012.cpp) | [정답 코드](../0x08/solutions/9012.cpp) |
 | 응용 문제✔ | 10799 | [쇠막대기](https://www.acmicpc.net/problem/10799) | [❌](#) | [정답 코드](../0x08/solutions/10799.cpp) |
 | 응용 문제✔ | 2504 | [괄호의 값](https://www.acmicpc.net/problem/2504) | [❌](#) | [정답 코드](../0x08/solutions/2504.cpp) |
