--- a/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x0E.md
+++ b/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x0E.md
@@ -1,6 +1,6 @@
 # 정렬 I
 
-## Last Update (2023.07.25)    
+## Last Update (2024.01.23)    
 
 ![100%](https://progress-bar.dev/8/?scale=8&title=progress&width=500&color=babaca&suffix=/8)
 
@@ -8,11 +8,11 @@
 
 | 문제 분류 | 문제 | 문제 제목 | 내 코드 | 정답 코드 |
 | :--: | :--: | :--: | :--: | :--: |
-| 기본 문제 | 2750 | [수 정렬하기](https://www.acmicpc.net/problem/2750) | [내 코드 1](../0x0E/my_solutions/2750.cpp) </br> [내 코드 2](../0x0E/my_solutions/2750-1.cpp) | [정답 코드](../0x0E/solutions/2750.cpp) |
-| 기본 문제 | 2751 | [수 정렬하기 2](https://www.acmicpc.net/problem/2751) | [내 코드](../0x0E/my_solutions/2751.cpp) | [정답 코드](../0x0E/solutions/2751.cpp) |
-| 기본 문제 | 10989 | [수 정렬하기 3](https://www.acmicpc.net/problem/10989) | [내 코드](../0x0E/my_solutions/10989.cpp) | [정답 코드](../0x0E/solutions/10989.cpp) |
-| 기본 문제 | 11931 | [수 정렬하기 4](https://www.acmicpc.net/problem/11931) | [내 코드 1](../0x0E/my_solutions/11931.cpp) </br> [내 코드 2](../0x0E/my_solutions/11931-1.cpp) | [정답 코드](../0x0E/solutions/11931.cpp) |
-| 기본 문제 | 15688 | [수 정렬하기 5](https://www.acmicpc.net/problem/15688) | [내 코드](../0x0E/my_solutions/15688.cpp) | [정답 코드](../0x0E/solutions/15688.cpp) |
-| 기본 문제 | 10814 | [나이순 정렬](https://www.acmicpc.net/problem/10814) | [내 코드 1](../0x0E/my_solutions/10814.cpp) </br> [내 코드 2](../0x0E/my_solutions/10814-1.cpp) | [정답 코드](../0x0E/solutions/10814.cpp) |
-| 기본 문제 | 11650 | [좌표 정렬하기](https://www.acmicpc.net/problem/11650) | [내 코드](../0x0E/my_solutions/11650.cpp) | [정답 코드](../0x0E/solutions/11650.cpp) |
-| 기본 문제 | 11651 | [좌표 정렬하기 2](https://www.acmicpc.net/problem/11651) | [내 코드](../0x0E/my_solutions/11651.cpp) | [정답 코드](../0x0E/solutions/11651.cpp), [별해 1](../0x0E/solutions/11651_1.cpp) |
+| 기본 문제 | 2750 | [수 정렬하기](https://www.acmicpc.net/problem/2750) | [✅ 1](../0x0E/my_solutions/2750.cpp) </br> [✅ 2](../0x0E/my_solutions/2750-1.cpp) | [정답 코드](../0x0E/solutions/2750.cpp) |
+| 기본 문제 | 2751 | [수 정렬하기 2](https://www.acmicpc.net/problem/2751) | [✅](../0x0E/my_solutions/2751.cpp) | [정답 코드](../0x0E/solutions/2751.cpp) |
+| 기본 문제 | 10989 | [수 정렬하기 3](https://www.acmicpc.net/problem/10989) | [✅](../0x0E/my_solutions/10989.cpp) | [정답 코드](../0x0E/solutions/10989.cpp) |
+| 기본 문제 | 11931 | [수 정렬하기 4](https://www.acmicpc.net/problem/11931) | [✅ 1](../0x0E/my_solutions/11931.cpp) </br> [✅ 2](../0x0E/my_solutions/11931-1.cpp) | [정답 코드](../0x0E/solutions/11931.cpp) |
+| 기본 문제 | 15688 | [수 정렬하기 5](https://www.acmicpc.net/problem/15688) | [✅](../0x0E/my_solutions/15688.cpp) | [정답 코드](../0x0E/solutions/15688.cpp) |
+| 기본 문제 | 10814 | [나이순 정렬](https://www.acmicpc.net/problem/10814) | [✅ 1](../0x0E/my_solutions/10814.cpp) </br> [✅ 2](../0x0E/my_solutions/10814-1.cpp) | [정답 코드](../0x0E/solutions/10814.cpp) |
+| 기본 문제 | 11650 | [좌표 정렬하기](https://www.acmicpc.net/problem/11650) | [✅](../0x0E/my_solutions/11650.cpp) | [정답 코드](../0x0E/solutions/11650.cpp) |
+| 기본 문제 | 11651 | [좌표 정렬하기 2](https://www.acmicpc.net/problem/11651) | [✅](../0x0E/my_solutions/11651.cpp) | [정답 코드](../0x0E/solutions/11651.cpp), [별해 1](../0x0E/solutions/11651_1.cpp) |
