--- a/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x04.md
+++ b/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x04.md
@@ -1,6 +1,6 @@
 # 연결 리스트
 
-## Last Update (2023.07.25)    
+## Last Update (2024.01.23)    
 
 ![100%](https://progress-bar.dev/1/?scale=3&title=progress&width=500&color=babaca&suffix=/3)
 
@@ -8,6 +8,6 @@
 
 | 문제 분류 | 문제 | 문제 제목 | 내 코드 | 정답 코드 |
 | :--: | :--: | :--: | :--: | :--: |
-| 연습 문제 | 1406 | [에디터](https://www.acmicpc.net/problem/1406) | [내 코드](../0x04/my_solutions/1406.cpp) | [정답 코드](../0x04/solutions/1406.cpp) |
+| 연습 문제 | 1406 | [에디터](https://www.acmicpc.net/problem/1406) | [✅](../0x04/my_solutions/1406.cpp) | [정답 코드](../0x04/solutions/1406.cpp) |
 | 기본 문제✔ | 5397 | [키로거](https://www.acmicpc.net/problem/5397) | [❌](#) | [정답 코드](../0x04/solutions/5397.cpp) |
 | 기본 문제✔ | 1158 | [요세푸스 문제](https://www.acmicpc.net/problem/1158) | [❌](#) | [정답 코드](../0x04/solutions/1158.cpp), [별해 1](../0x04/solutions/1158_1.cpp), [별해 2](../0x04/solutions/1158_2.cpp) |
