--- a/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x05.md
+++ b/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x05.md
@@ -1,6 +1,6 @@
 # 스택
 
-## Last Update (2023.07.25)    
+## Last Update (2024.01.23)    
 
 ![100%](https://progress-bar.dev/3/?scale=8&title=progress&width=500&color=babaca&suffix=/8)
 
@@ -8,9 +8,9 @@
 
 | 문제 분류 | 문제 | 문제 제목 | 내 코드 | 정답 코드 |
 | :--: | :--: | :--: | :--: | :--: |
-| 연습 문제 | 10828 | [스택](https://www.acmicpc.net/problem/10828) | [내 코드](../0x05/my_solutions/10828.cpp) | [정답 코드](../0x05/solutions/10828.cpp) |
-| 기본 문제✔ | 10773 | [제로](https://www.acmicpc.net/problem/10773) | [내 코드](../0x05/my_solutions/10773.cpp) | [정답 코드](../0x05/solutions/10773.cpp) |
-| 응용 문제✔ | 1874 | [스택 수열](https://www.acmicpc.net/problem/1874) | [내 코드 1](../0x05/my_solutions/1874.cpp) </br> [내 코드 2](../0x05/my_solutions/1874-1.cpp) | [정답 코드](../0x05/solutions/1874.cpp) |
+| 연습 문제 | 10828 | [스택](https://www.acmicpc.net/problem/10828) | [✅](../0x05/my_solutions/10828.cpp) | [정답 코드](../0x05/solutions/10828.cpp) |
+| 기본 문제✔ | 10773 | [제로](https://www.acmicpc.net/problem/10773) | [✅](../0x05/my_solutions/10773.cpp) | [정답 코드](../0x05/solutions/10773.cpp) |
+| 응용 문제✔ | 1874 | [스택 수열](https://www.acmicpc.net/problem/1874) | [✅ 1](../0x05/my_solutions/1874.cpp) </br> [✅ 2](../0x05/my_solutions/1874-1.cpp) | [정답 코드](../0x05/solutions/1874.cpp) |
 | 응용 문제✔ | 2493 | [탑](https://www.acmicpc.net/problem/2493) | [❌](#) | [정답 코드](../0x05/solutions/2493.cpp) |
 | 응용 문제 | 6198 | [옥상 정원 꾸미기](https://www.acmicpc.net/problem/6198) | [❌](#) | [정답 코드](../0x05/solutions/6198.cpp) |
 | 응용 문제 | 17298 | [오큰수](https://www.acmicpc.net/problem/17298) | [❌](#) | [정답 코드](../0x05/solutions/17298.cpp) |
