--- a/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x0F.md
+++ b/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x0F.md
@@ -1,6 +1,6 @@
 # 정렬 II
 
-## Last Update (2023.07.25)    
+## Last Update (2024.01.23)    
 
 ![100%](https://progress-bar.dev/2/?scale=9&title=progress&width=500&color=babaca&suffix=/9)
 
@@ -11,9 +11,9 @@
 | 연습 문제 | 1431 | [시리얼 번호](https://www.acmicpc.net/problem/1431) | [❌](#) | [정답 코드](../0x0F/solutions/1431.cpp) |
 | 연습 문제 | 11652 | [카드](https://www.acmicpc.net/problem/11652) | [❌](#) | [정답 코드](../0x0F/solutions/11652.cpp) |
 | 기본 문제✔ | 5648 | [역원소 정렬](https://www.acmicpc.net/problem/5648) | [❌](#) | [정답 코드](../0x0F/solutions/5648.cpp) |
-| 기본 문제✔ | 1181 | [단어 정렬](https://www.acmicpc.net/problem/1181) | [내 코드](../0x0F/my_solutions/1181.cpp) | [정답 코드](../0x0F/solutions/1181.cpp) |
+| 기본 문제✔ | 1181 | [단어 정렬](https://www.acmicpc.net/problem/1181) | [✅](../0x0F/my_solutions/1181.cpp) | [정답 코드](../0x0F/solutions/1181.cpp) |
 | 기본 문제✔ | 2910 | [빈도 정렬](https://www.acmicpc.net/problem/2910) | [❌](#) | [정답 코드](../0x0F/solutions/2910.cpp) |
-| 기본 문제 | 10814 | [나이순 정렬](https://www.acmicpc.net/problem/10814) | [내 코드 1](../0x0F/my_solutions/10814.cpp) </br> [내 코드 2](../0x0F/my_solutions/10814-1.cpp) | [정답 코드](../0x0F/solutions/10814.cpp) |
+| 기본 문제 | 10814 | [나이순 정렬](https://www.acmicpc.net/problem/10814) | [✅ 1](../0x0F/my_solutions/10814.cpp) </br> [✅ 2](../0x0F/my_solutions/10814-1.cpp) | [정답 코드](../0x0F/solutions/10814.cpp) |
 | 기본 문제 | 11656 | [접미사 배열](https://www.acmicpc.net/problem/11656) | [❌](#) | [정답 코드](../0x0F/solutions/11656.cpp) |
 | 기본 문제 | 10825 | [국영수](https://www.acmicpc.net/problem/10825) | [❌](#) | [정답 코드](../0x0F/solutions/10825.cpp) |
 | 응용 문제✔ | 7795 | [먹을 것인가 먹힐 것인가](https://www.acmicpc.net/problem/7795) | [❌](#) | [정답 코드](../0x0F/solutions/7795.cpp), [별해 1](../0x0F/solutions/7795_1.cpp) |
