--- a/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x10.md
+++ b/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x10.md
@@ -1,6 +1,6 @@
 # 다이나믹 프로그래밍
 
-## Last Update (2023.07.25)    
+## Last Update (2024.01.23)    
 
 ![100%](https://progress-bar.dev/3/?scale=44&title=progress&width=500&color=babaca&suffix=/44)
 
@@ -8,14 +8,14 @@
 
 | 문제 분류 | 문제 | 문제 제목 | 내 코드 | 정답 코드 |
 | :--: | :--: | :--: | :--: | :--: |
-| 연습 문제 | 1463 | [1로 만들기](https://www.acmicpc.net/problem/1463) | [내 코드](../0x10/my_solutions/1463.cpp) | [정답 코드](../0x10/solutions/1463.cpp) |
-| 연습 문제 | 9095 | [1, 2, 3 더하기](https://www.acmicpc.net/problem/9095) | [내 코드](../0x10/my_solutions/9095.cpp) | [정답 코드](../0x10/solutions/9095.cpp) |
+| 연습 문제 | 1463 | [1로 만들기](https://www.acmicpc.net/problem/1463) | [✅](../0x10/my_solutions/1463.cpp) | [정답 코드](../0x10/solutions/1463.cpp) |
+| 연습 문제 | 9095 | [1, 2, 3 더하기](https://www.acmicpc.net/problem/9095) | [✅](../0x10/my_solutions/9095.cpp) | [정답 코드](../0x10/solutions/9095.cpp) |
 | 연습 문제 | 2579 | [계단 오르기](https://www.acmicpc.net/problem/2579) | [❌](#) | [정답 코드](../0x10/solutions/2579.cpp), [별해 1](../0x10/solutions/2579_1.cpp), [별해 2](../0x10/solutions/2579_2.cpp) |
 | 연습 문제 | 1149 | [RGB거리](https://www.acmicpc.net/problem/1149) | [❌](#) | [정답 코드](../0x10/solutions/1149.cpp) |
 | 연습 문제 | 11726 | [2×n 타일링](https://www.acmicpc.net/problem/11726) | [❌](#) | [정답 코드](../0x10/solutions/11726.cpp) |
 | 연습 문제 | 11659 | [구간 합 구하기 4](https://www.acmicpc.net/problem/11659) | [❌](#) | [정답 코드](../0x10/solutions/11659.cpp) |
 | 연습 문제 | 12852 | [1로 만들기 2](https://www.acmicpc.net/problem/12852) | [❌](#) | [정답 코드](../0x10/solutions/12852.cpp) |
-| 기본 문제✔ | 1003 | [피보나치 함수](https://www.acmicpc.net/problem/1003) | [내 코드](../0x10/my_solutions/1003.cpp) | [정답 코드](../0x10/solutions/1003.cpp) |
+| 기본 문제✔ | 1003 | [피보나치 함수](https://www.acmicpc.net/problem/1003) | [✅](../0x10/my_solutions/1003.cpp) | [정답 코드](../0x10/solutions/1003.cpp) |
 | 기본 문제✔ | 1932 | [정수 삼각형](https://www.acmicpc.net/problem/1932) | [❌](#) | [정답 코드](../0x10/solutions/1932.cpp) |
 | 기본 문제✔ | 11727 | [2×n 타일링 2](https://www.acmicpc.net/problem/11727) | [❌](#) | [정답 코드](../0x10/solutions/11727.cpp) |
 | 기본 문제✔ | 2193 | [이친수](https://www.acmicpc.net/problem/2193) | [❌](#) | [정답 코드](../0x10/solutions/2193.cpp) |
