--- a/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x12.md
+++ b/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x12.md
@@ -1,6 +1,6 @@
 # 수학
 
-## Last Update (2023.07.25)    
+## Last Update (2024.01.23)    
 
 ![100%](https://progress-bar.dev/10/?scale=39&title=progress&width=500&color=babaca&suffix=/39)
 
@@ -8,26 +8,26 @@
 
 | 문제 분류 | 문제 | 문제 제목 | 내 코드 | 정답 코드 |
 | :--: | :--: | :--: | :--: | :--: |
-| 연습 문제 | 1978 | [소수 찾기](https://www.acmicpc.net/problem/1978) | [내 코드](../0x12/my_solutions/1978.cpp) | [정답 코드](../0x12/solutions/1978.cpp) |
-| 연습 문제 | 1929 | [소수 구하기](https://www.acmicpc.net/problem/1929) | [내 코드 1](../0x12/my_solutions/1929.cpp) </br> [내 코드 2](../0x12/my_solutions/1929-1.cpp) | [정답 코드](../0x12/solutions/1929.cpp) |
-| 연습 문제 | 11653 | [소인수분해](https://www.acmicpc.net/problem/11653) | [내 코드 1](../0x12/my_solutions/11653.cpp) </br> [내 코드 2](../0x12/my_solutions/11653-1.cpp) | [정답 코드](../0x12/solutions/11653.cpp) |
+| 연습 문제 | 1978 | [소수 찾기](https://www.acmicpc.net/problem/1978) | [✅](../0x12/my_solutions/1978.cpp) | [정답 코드](../0x12/solutions/1978.cpp) |
+| 연습 문제 | 1929 | [소수 구하기](https://www.acmicpc.net/problem/1929) | [✅ 1](../0x12/my_solutions/1929.cpp) </br> [✅ 2](../0x12/my_solutions/1929-1.cpp) | [정답 코드](../0x12/solutions/1929.cpp) |
+| 연습 문제 | 11653 | [소인수분해](https://www.acmicpc.net/problem/11653) | [✅ 1](../0x12/my_solutions/11653.cpp) </br> [✅ 2](../0x12/my_solutions/11653-1.cpp) | [정답 코드](../0x12/solutions/11653.cpp) |
 | 연습 문제 | 6064 | [카잉 달력](https://www.acmicpc.net/problem/6064) | [❌](#) | [정답 코드](../0x12/solutions/6064.cpp) |
-| 연습 문제 | 11050 | [이항 계수 1](https://www.acmicpc.net/problem/11050) | [내 코드](../0x12/my_solutions/11050.cpp) | [정답 코드](../0x12/solutions/11050.cpp) |
+| 연습 문제 | 11050 | [이항 계수 1](https://www.acmicpc.net/problem/11050) | [✅](../0x12/my_solutions/11050.cpp) | [정답 코드](../0x12/solutions/11050.cpp) |
 | 연습 문제 | 11051 | [이항 계수 2](https://www.acmicpc.net/problem/11051) | [❌](#) | [정답 코드](../0x12/solutions/11051.cpp) |
 | 기본 문제✔ | 15894 | [수학은 체육과목 입니다](https://www.acmicpc.net/problem/15894) | [❌](#) | [정답 코드](../0x12/solutions/15894.cpp) |
 | 기본 문제✔ | 4796 | [캠핑](https://www.acmicpc.net/problem/4796) | [❌](#) | [정답 코드](../0x12/solutions/4796.cpp) |
 | 기본 문제✔ | 2960 | [에라토스테네스의 체](https://www.acmicpc.net/problem/2960) | [❌](#) | [정답 코드](../0x12/solutions/2960.cpp) |
-| 기본 문제✔ | 1193 | [분수찾기](https://www.acmicpc.net/problem/1193) | [내 코드](../0x12/my_solutions/1193.cpp) | [정답 코드](../0x12/solutions/1193.cpp) |
+| 기본 문제✔ | 1193 | [분수찾기](https://www.acmicpc.net/problem/1193) | [✅](../0x12/my_solutions/1193.cpp) | [정답 코드](../0x12/solutions/1193.cpp) |
 | 기본 문제✔ | 4948 | [베르트랑 공준](https://www.acmicpc.net/problem/4948) | [❌](#) | [정답 코드](../0x12/solutions/4948.cpp) |
-| 기본 문제✔ | 1676 | [팩토리얼 0의 개수](https://www.acmicpc.net/problem/1676) | [내 코드](../0x12/my_solutions/1676.cpp) | [정답 코드](../0x12/solutions/1676.cpp) |
+| 기본 문제✔ | 1676 | [팩토리얼 0의 개수](https://www.acmicpc.net/problem/1676) | [✅](../0x12/my_solutions/1676.cpp) | [정답 코드](../0x12/solutions/1676.cpp) |
 | 기본 문제✔ | 9613 | [GCD 합](https://www.acmicpc.net/problem/9613) | [❌](#) | [정답 코드](../0x12/solutions/9613.cpp) |
-| 기본 문제 | 2292 | [벌집](https://www.acmicpc.net/problem/2292) | [내 코드](../0x12/my_solutions/2292.cpp) | [정답 코드](../0x12/solutions/2292.cpp) |
-| 기본 문제 | 2869 | [달팽이는 올라가고 싶다](https://www.acmicpc.net/problem/2869) | [내 코드](../0x12/my_solutions/2869.cpp) | [정답 코드](../0x12/solutions/2869.cpp) |
+| 기본 문제 | 2292 | [벌집](https://www.acmicpc.net/problem/2292) | [✅](../0x12/my_solutions/2292.cpp) | [정답 코드](../0x12/solutions/2292.cpp) |
+| 기본 문제 | 2869 | [달팽이는 올라가고 싶다](https://www.acmicpc.net/problem/2869) | [✅](../0x12/my_solutions/2869.cpp) | [정답 코드](../0x12/solutions/2869.cpp) |
 | 기본 문제 | 10610 | [30](https://www.acmicpc.net/problem/10610) | [❌](#) | [정답 코드](../0x12/solutions/10610.cpp) |
 | 기본 문제 | 6359 | [만취한 상범](https://www.acmicpc.net/problem/6359) | [❌](#) | [정답 코드](../0x12/solutions/6359.cpp), [별해 1](../0x12/solutions/6359_1.cpp) |
-| 기본 문제 | 10250 | [ACM 호텔](https://www.acmicpc.net/problem/10250) | [내 코드](../0x12/my_solutions/10250.cpp) | [정답 코드](../0x12/solutions/10250.cpp) |
+| 기본 문제 | 10250 | [ACM 호텔](https://www.acmicpc.net/problem/10250) | [✅](../0x12/my_solutions/10250.cpp) | [정답 코드](../0x12/solutions/10250.cpp) |
 | 기본 문제 | 1456 | [거의 소수](https://www.acmicpc.net/problem/1456) | [❌](#) | [정답 코드](../0x12/solutions/1456.cpp) |
-| 기본 문제 | 2839 | [설탕 배달](https://www.acmicpc.net/problem/2839) | [내 코드](../0x12/my_solutions/2839.cpp) | [정답 코드](../0x12/solutions/2839.cpp) |
+| 기본 문제 | 2839 | [설탕 배달](https://www.acmicpc.net/problem/2839) | [✅](../0x12/my_solutions/2839.cpp) | [정답 코드](../0x12/solutions/2839.cpp) |
 | 기본 문제 | 17103 | [골드바흐 파티션](https://www.acmicpc.net/problem/17103) | [❌](#) | [정답 코드](../0x12/solutions/17103.cpp) |
 | 기본 문제 | 2312 | [수 복원하기](https://www.acmicpc.net/problem/2312) | [❌](#) | [정답 코드](../0x12/solutions/2312.cpp) |
 | 기본 문제 | 9020 | [골드바흐의 추측](https://www.acmicpc.net/problem/9020) | [❌](#) | [정답 코드](../0x12/solutions/9020.cpp) |
