--- a/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x13.md
+++ b/BaaaaaaaaaaaaaaaaaaaaarkingDog/workbook/0x13.md
@@ -1,6 +1,6 @@
 # 이분탐색
 
-## Last Update (2023.07.25)    
+## Last Update (2024.01.23)    
 
 ![100%](https://progress-bar.dev/3/?scale=21&title=progress&width=500&color=babaca&suffix=/21)
 
@@ -8,11 +8,11 @@
 
 | 문제 분류 | 문제 | 문제 제목 | 내 코드 | 정답 코드 |
 | :--: | :--: | :--: | :--: | :--: |
-| 연습 문제 | 1920 | [수 찾기](https://www.acmicpc.net/problem/1920) | [내 코드 1](../0x13/my_solutions/1920.cpp) </br> [내 코드 2](../0x13/my_solutions/1920-1.cpp) | [정답 코드](../0x13/solutions/1920.cpp), [별해 1](../0x13/solutions/1920_1.cpp) |
-| 연습 문제 | 10816 | [숫자 카드 2](https://www.acmicpc.net/problem/10816) | [내 코드 1](../0x13/my_solutions/10816.cpp) </br> [내 코드 2](../0x13/my_solutions/10816-1.cpp) | [정답 코드](../0x13/solutions/10816.cpp), [별해 1](../0x13/solutions/10816_1.cpp) |
+| 연습 문제 | 1920 | [수 찾기](https://www.acmicpc.net/problem/1920) | [✅ 1](../0x13/my_solutions/1920.cpp) </br> [✅ 2](../0x13/my_solutions/1920-1.cpp) | [정답 코드](../0x13/solutions/1920.cpp), [별해 1](../0x13/solutions/1920_1.cpp) |
+| 연습 문제 | 10816 | [숫자 카드 2](https://www.acmicpc.net/problem/10816) | [✅ 1](../0x13/my_solutions/10816.cpp) </br> [✅ 2](../0x13/my_solutions/10816-1.cpp) | [정답 코드](../0x13/solutions/10816.cpp), [별해 1](../0x13/solutions/10816_1.cpp) |
 | 연습 문제 | 18870 | [좌표 압축](https://www.acmicpc.net/problem/18870) | [❌](#) | [정답 코드](../0x13/solutions/18870.cpp), [별해 1](../0x13/solutions/18870_1.cpp) |
 | 연습 문제 | 2295 | [세 수의 합](https://www.acmicpc.net/problem/2295) | [❌](#) | [정답 코드](../0x13/solutions/2295.cpp) |
-| 연습 문제 | 1654 | [랜선 자르기](https://www.acmicpc.net/problem/1654) | [내 코드 1](../0x13/my_solutions/1654.cpp) </br> [내 코드 2](../0x13/my_solutions/1654-1.cpp) | [정답 코드](../0x13/solutions/1654.cpp) |
+| 연습 문제 | 1654 | [랜선 자르기](https://www.acmicpc.net/problem/1654) | [✅ 1](../0x13/my_solutions/1654.cpp) </br> [✅ 2](../0x13/my_solutions/1654-1.cpp) | [정답 코드](../0x13/solutions/1654.cpp) |
 | 기본 문제✔ | 10815 | [숫자 카드](https://www.acmicpc.net/problem/10815) | [❌](#) | [정답 코드](../0x13/solutions/10815.cpp) |
 | 기본 문제✔ | 1822 | [차집합](https://www.acmicpc.net/problem/1822) | [❌](#) | [정답 코드](../0x13/solutions/1822.cpp) |
 | 기본 문제✔ | 16401 | [과자 나눠주기](https://www.acmicpc.net/problem/16401) | [❌](#) | [정답 코드](../0x13/solutions/16401.cpp) |
