--- a/Web/workbook/0x04.md
+++ b/Web/workbook/0x04.md
@@ -3,11 +3,11 @@
 ## 총 28강 (05 hours 21 minutes)
 
 ## 수강 기간 
-- 학습          : 22.04.08 ~ 22.04.10 / 2023.07.21 ~ 2023.07.26
+- 학습          : 22.04.08 ~ 22.04.10 / 2023.07.21 ~ 2023.07.26 / 2024.01.26 ~ 2024.01.27    
 
 ## Last Update (2023.07.25)    
 
-![100%](https://progress-bar.dev/16/?scale=28&title=progress&width=500&color=babaca&suffix=/98)
+![100%](https://progress-bar.dev/28/?scale=28&title=progress&width=500&color=babaca&suffix=/98)
 
 
 | 번호 | 강의 제목 | Time | Check | Result |
@@ -36,25 +36,25 @@
 | | | | | |
 | Section 4 | 스프링 빈과 의존관계 | 2 Lectures / 27m | ✅ | | 
 | Chapter 4-1 | 컴포지트 스캔과 자동 의존관계 설정  | 14m 07s | ✅ | | 
-| Chapter 4-2 | 자바 코드로 직접 스프링 빈 등록하기 | 13m 47s | ✅ | ~ 23.07.23 | 
+| Chapter 4-2 | 자바 코드로 직접 스프링 빈 등록하기 | 13m 47s | ✅ |  | 
 | | | | | |
-| Section 5 | 회원 관리 예제 - 웹 MVC 개발 | 3 Lectures / 17m | :hammer: | | 
-| Chapter 5-1 | 회원 웹 기능 - 홈 화면 추가 | 03m 49s | :hammer: | | 
-| Chapter 5-2 | 회원 웹 기능 - 등록 | 09m 09s | ❌ | | 
-| Chapter 5-3 | 회원 웹 기능 - 조회 | 04m 48s | ❌ | | 
+| Section 5 | 회원 관리 예제 - 웹 MVC 개발 | 3 Lectures / 17m | ✅ | | 
+| Chapter 5-1 | 회원 웹 기능 - 홈 화면 추가 | 03m 49s | ✅ | | 
+| Chapter 5-2 | 회원 웹 기능 - 등록 | 09m 09s | ✅ | | 
+| Chapter 5-3 | 회원 웹 기능 - 조회 | 04m 48s | ✅ | | 
 | | | | | |
-| Section 6 | 스프링 DB 접근 기술 | 6 Lectures / 1h 33m | ❌ | | 
-| Chapter 6-1 | H2 데이터베이스 설치 | 10m 51s | ❌ | | 
-| Chapter 6-2 | 순수 JDBC | 21m 38s | ❌ | | 
-| Chapter 6-3 | 스프링 통합 테스트 | 12m 50s | ❌ | | 
-| Chapter 6-4 | 스프링 JdbcTemplate | 11m 54s | ❌ | | 
-| Chapter 6-5 | JPA | 20m 50s | ❌ | | 
-| Chapter 6-6 | 스프링 데이터 JPA | 15m 35s | ❌ | | 
+| Section 6 | 스프링 DB 접근 기술 | 6 Lectures / 1h 33m | ✅ | | 
+| Chapter 6-1 | H2 데이터베이스 설치 | 10m 51s | ✅ | | 
+| Chapter 6-2 | 순수 JDBC | 21m 38s | ✅ | | 
+| Chapter 6-3 | 스프링 통합 테스트 | 12m 50s | ✅ | | 
+| Chapter 6-4 | 스프링 JdbcTemplate | 11m 54s | ✅ | | 
+| Chapter 6-5 | JPA | 20m 50s | ✅ | | 
+| Chapter 6-6 | 스프링 데이터 JPA | 15m 35s | ✅ | | 
 | | | | | |
-| Section 7 | AOP | 2 Lectures / 22m | ❌ | | 
-| Chapter 7-1 | AOP가 필요한 상황  | 08m 18s | ❌ | | 
-| Chapter 7-2 | AOP 적용 | 14m 03s | ❌ | | 
+| Section 7 | AOP | 2 Lectures / 22m | ✅ | | 
+| Chapter 7-1 | AOP가 필요한 상황  | 08m 18s | ✅ | | 
+| Chapter 7-2 | AOP 적용 | 14m 03s | ✅ | | 
 | | | | | |
-| Section 8 | 다음으로 | 1 Lecture / 18m | ❌ | | 
-| Chapter 8-1 | 다음으로  | 18m 55s | ❌ | | 
+| Section 8 | 다음으로 | 1 Lecture / 18m | ✅ | | 
+| Chapter 8-1 | 다음으로  | 18m 55s | ✅ | ✅ | 
 
